2009-10-24  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Holger Freyther.

        [Qt] [Symbian] Set the capability and memory required to run QtWebKit for Symbian
        https://bugs.webkit.org/show_bug.cgi?id=30476

        Assign ReadUserData WriteUserData NetworkServices Symbian capabilities
        to jsc.exe.

        * jsc.pro:

2009-10-23  Steve Block  <steveblock@google.com>

        Reviewed by Dmitry Titov.

        Fixes a leak in createThreadInternal on Android.
        https://bugs.webkit.org/show_bug.cgi?id=30698

        * wtf/ThreadingPthreads.cpp: Modified.
        (WTF::createThreadInternal): Avoid leaking a ThreadData object on failure.

2009-10-22  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Alexey Proskuryakov.

        Fixed ASSERT when opening Safari's Caches window while the Web Inspector
        is open.

        * runtime/Collector.cpp:
        (JSC::typeName): Added two new types to the type name list in the Collector.
        These types have been around for a while, but nobody remembered to consider them here.

        * runtime/JSCell.h:
        (JSC::JSCell::isPropertyNameIterator):
        * runtime/JSPropertyNameIterator.h:
        (JSC::JSPropertyNameIterator::isPropertyNameIterator): Give the Collector
        a way to tell if a cell is a JSPropertyNameIterator.

2009-10-22  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Jon Honeycutt.

        https://bugs.webkit.org/show_bug.cgi?id=30686
        Remove debug-specific def file.
        Only Debug_All target uses JavaScriptCore_debug.dll naming, and since
        that target is only used internally, maintaining two files just to
        suppress a single link warning isn't worthwhile.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCoreCommon.vsprops:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore_debug.def: Removed.

2009-10-21  Jon Honeycutt  <jhoneycutt@apple.com>
